<resources>
    <string name="app_name">Latihan Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukan_nominal">Masukan Nominal</string>
    <string name="icon">icon</string>
    <string name="ini_halaman_pertama">Ini Halaman Pertama</string>
    <string name="ini_halaman_kedua">Ini Halaman Kedua</string>
    <string name="tv_nama">Nama Panggilan Kamu Siapa?</string>
    <string name="et_nama">Nama Kamu</string>
    <string name="next">Next</string>
    <string name="iv_sabrina">iv_sabrina</string>
    <string name="mulai">Mulai</string>
    <string name="ini_halaman_ketiga">Ini Halaman Ketiga</string>
    <string name="sayhello">Halo!!!</string>
    <string name="default_name">Rizqi</string>
    <string name="bg_ouput">bg_ouput</string>
    <string name="note">** Form tidak boleh kosong atau bernilai nol (0)</string>
    <string name="ini_halaman_keempat">Ini Halaman Keempat</string>
    <string name="desc_beasiswa">Untuk mengajukan beasiswa atau potongan harga Course yang ada di binar silakan isikan data-data berikut untuk diverifikasi dan di olah sabrina</string>
    <string name="tv_gaji">Berapa Gaji Orang Tua Kamu?</string>
    <string name="tv_penghasilan">Berapa Penghasilan Kamu?</string>
    <string name="tv_tanggungan">Berapa Jumlah Tanggungan?</string>
    <string name="et_tanggungan">Masukan Jumlah Tanggungan</string>

</resources>